{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 1229,
  "lineage": "0d404685-9a71-7d5b-4717-fdae97997f25",
  "resources": [
    {
      "module": "module.autoscaling-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:loadbalancer/app/ecommerce-lb/dae4c106ab108ba3",
            "arn_suffix": "app/ecommerce-lb/dae4c106ab108ba3",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-lb-967348745.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:loadbalancer/app/ecommerce-lb/dae4c106ab108ba3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b39d74acd6993a6c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06f8e12ce849ef6c4"
              },
              {
                "subnet_id": "subnet-07607027b09b830ec"
              }
            ],
            "subnets": [
              "subnet-06f8e12ce849ef6c4",
              "subnet-07607027b09b830ec"
            ],
            "tags": {
              "Name": "Webservers-LB"
            },
            "tags_all": {
              "Name": "Webservers-LB"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "module.vpc.aws_security_group.ALB-Security-Group",
            "module.vpc.aws_subnet.pub1A",
            "module.vpc.aws_subnet.pub2A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:listener/app/ecommerce-lb/dae4c106ab108ba3/aa9e118b752aa816",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:targetgroup/app-lb-tg/e4558f1a78f993e0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:listener/app/ecommerce-lb/dae4c106ab108ba3/aa9e118b752aa816",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:loadbalancer/app/ecommerce-lb/dae4c106ab108ba3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling-alb.aws_lb.application-lb",
            "module.autoscaling-alb.aws_lb_target_group.app-lb-tg",
            "module.vpc.aws_security_group.ALB-Security-Group",
            "module.vpc.aws_subnet.pub1A",
            "module.vpc.aws_subnet.pub2A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:targetgroup/app-lb-tg/e4558f1a78f993e0",
            "arn_suffix": "targetgroup/app-lb-tg/e4558f1a78f993e0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-399",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:888659321129:targetgroup/app-lb-tg/e4558f1a78f993e0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ca-central-1:888659321129:loadbalancer/app/ecommerce-lb/dae4c106ab108ba3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "webserver-target-group"
            },
            "tags_all": {
              "Name": "webserver-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ca61dde3dc883d0",
            "arn": "arn:aws:ec2:ca-central-1:888659321129:instance/i-043859575129c99e2",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043859575129c99e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "abkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-039baea748c11862d",
            "private_dns": "ip-10-0-7-184.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.7.184",
            "public_ip": "15.157.59.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f0330f48f4e0c8d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06f8e12ce849ef6c4",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1ef9442b85f5dc7"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.pub1A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09ca61dde3dc883d0",
            "arn": "arn:aws:ec2:ca-central-1:888659321129:instance/i-0979d26cacc201fe8",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0979d26cacc201fe8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "abkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b088b8409a8ba267",
            "private_dns": "ip-10-0-128-221.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.128.221",
            "public_ip": "35.183.70.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024a1279accd25ae8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07607027b09b830ec",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b1ef9442b85f5dc7"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.pub2A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kosIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:internet-gateway/igw-011153d9492364f6e",
            "id": "igw-011153d9492364f6e",
            "owner_id": "888659321129",
            "tags": {
              "Name": "kosIGW"
            },
            "tags_all": {
              "Name": "kosIGW"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:network-acl/acl-07394b22afd4992e6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 0
              }
            ],
            "id": "acl-07394b22afd4992e6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "888659321129",
            "subnet_ids": [
              "subnet-02d2709bc1d8acd28",
              "subnet-040e30742df367168"
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:network-acl/acl-0a3e4b847049a8aff",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 0
              }
            ],
            "id": "acl-0a3e4b847049a8aff",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 23,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 23
              }
            ],
            "owner_id": "888659321129",
            "subnet_ids": [
              "subnet-06f8e12ce849ef6c4",
              "subnet-07607027b09b830ec"
            ],
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "priv1nacls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01457d3105ef26926",
            "network_acl_id": "acl-07394b22afd4992e6",
            "subnet_id": "subnet-040e30742df367168"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private_nacls",
            "module.vpc.aws_subnet.priv1A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "priv2nacls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0458b6340c35b0294",
            "network_acl_id": "acl-07394b22afd4992e6",
            "subnet_id": "subnet-02d2709bc1d8acd28"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.private_nacls",
            "module.vpc.aws_subnet.priv2A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub1-nacls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0b9ab77d1d59ce250",
            "network_acl_id": "acl-0a3e4b847049a8aff",
            "subnet_id": "subnet-06f8e12ce849ef6c4"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public_nacls",
            "module.vpc.aws_subnet.pub1A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub2-nacls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0922fdfe886981876",
            "network_acl_id": "acl-0a3e4b847049a8aff",
            "subnet_id": "subnet-07607027b09b830ec"
          },
          "dependencies": [
            "module.vpc.aws_network_acl.public_nacls",
            "module.vpc.aws_subnet.pub2A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-011153d9492364f6e",
            "id": "r-rtb-0767d78c6ab9316811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0767d78c6ab931681",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kosIGW",
            "module.vpc.aws_route_table.pubRT1",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "pubRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-011153d9492364f6e",
            "id": "r-rtb-0325d75c05e902e1c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0325d75c05e902e1c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kosIGW",
            "module.vpc.aws_route_table.pubRT2",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:route-table/rtb-0e1c703fee06ac261",
            "id": "rtb-0e1c703fee06ac261",
            "owner_id": "888659321129",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privRT1"
            },
            "tags_all": {
              "Name": "privRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:route-table/rtb-088948cb160704cac",
            "id": "rtb-088948cb160704cac",
            "owner_id": "888659321129",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privRT2"
            },
            "tags_all": {
              "Name": "privRT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:route-table/rtb-0767d78c6ab931681",
            "id": "rtb-0767d78c6ab931681",
            "owner_id": "888659321129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011153d9492364f6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubRT1"
            },
            "tags_all": {
              "Name": "pubRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kosIGW",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:route-table/rtb-0325d75c05e902e1c",
            "id": "rtb-0325d75c05e902e1c",
            "owner_id": "888659321129",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011153d9492364f6e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubRT2"
            },
            "tags_all": {
              "Name": "pubRT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.kosIGW",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0462f81dd9ecd14ba",
            "route_table_id": "rtb-0e1c703fee06ac261",
            "subnet_id": "subnet-040e30742df367168"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privRT1",
            "module.vpc.aws_subnet.priv1A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c6a751caf97cae5",
            "route_table_id": "rtb-088948cb160704cac",
            "subnet_id": "subnet-02d2709bc1d8acd28"
          },
          "dependencies": [
            "module.vpc.aws_route_table.privRT2",
            "module.vpc.aws_subnet.priv2A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09edf55baa110c12f",
            "route_table_id": "rtb-0767d78c6ab931681",
            "subnet_id": "subnet-06f8e12ce849ef6c4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.kosIGW",
            "module.vpc.aws_route_table.pubRT1",
            "module.vpc.aws_subnet.pub1A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bba515cceeba372",
            "route_table_id": "rtb-0325d75c05e902e1c",
            "subnet_id": "subnet-07607027b09b830ec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.kosIGW",
            "module.vpc.aws_route_table.pubRT2",
            "module.vpc.aws_subnet.pub2A",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB-Security-Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:security-group/sg-0b39d74acd6993a6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b39d74acd6993a6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AutoScaling-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:security-group/sg-09c62e994c3eb1275",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c62e994c3eb1275",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ALL TCP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b39d74acd6993a6c"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "AutoScaling-SG",
            "name_prefix": "",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ALB-Security-Group",
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EFS-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:security-group/sg-0e2d62a70ba61afd3",
            "description": "efs-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2d62a70ba61afd3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "EFS",
            "name_prefix": "",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PrivSub-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:security-group/sg-032d5fcfa1d0143c4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032d5fcfa1d0143c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PrivateSub-SG",
            "name_prefix": "",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PubSubnet-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:security-group/sg-0a7036c7a19f896bd",
            "description": "This security group is used for public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7036c7a19f896bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PublicSG",
            "name_prefix": "",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PublicSG"
            },
            "tags_all": {
              "Name": "PublicSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:security-group/sg-07e012f8cc6c63c0e",
            "description": "Bastion-host-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e012f8cc6c63c0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "185.173.204.101/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-host",
            "name_prefix": "",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC",
            "module.vpc.data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:security-group/sg-04ccec11b3dd65e0a",
            "description": "RDS instance security group",
            "egress": [],
            "id": "sg-04ccec11b3dd65e0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "888659321129",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:subnet/subnet-040e30742df367168",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040e30742df367168",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888659321129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv1A"
            },
            "tags_all": {
              "Name": "priv1A"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:subnet/subnet-02d2709bc1d8acd28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d2709bc1d8acd28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "888659321129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv2A"
            },
            "tags_all": {
              "Name": "priv2A"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:subnet/subnet-06f8e12ce849ef6c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f8e12ce849ef6c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888659321129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub1A"
            },
            "tags_all": {
              "Name": "pub1A"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:subnet/subnet-07607027b09b830ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07607027b09b830ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "888659321129",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub2A"
            },
            "tags_all": {
              "Name": "pub2A"
            },
            "vpc_id": "vpc-01bd9bc60f8708d50"
          },
          "dependencies": [
            "module.vpc.aws_vpc.akrapovic-VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "akrapovic-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:888659321129:vpc/vpc-01bd9bc60f8708d50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088b45ffa007013f2",
            "default_route_table_id": "rtb-0b4e7dd9a6217d0fa",
            "default_security_group_id": "sg-0b1ef9442b85f5dc7",
            "dhcp_options_id": "dopt-01c19369",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bd9bc60f8708d50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4e7dd9a6217d0fa",
            "owner_id": "888659321129",
            "tags": {
              "Name": "acrapovic-VPC"
            },
            "tags_all": {
              "Name": "acrapovic-VPC"
            }
          }
        }
      ]
    }
  ]
}